# translation_extension

./: .env.example  .gitignore  ARCHITECTURE.md  Architecturev2.md  BUILD_SUMMARY.md  CANVAS_FIX_SUMMARY.md  CORS_FIX.md  README.md  SETUP.md  create_icons.py  create_placeholder_icons.sh  curl_example.txt  main_extension.js  package.json  pnpm-lock.yaml  response_example.txt  service_worker_prod_bin.js  tsconfig.json  vite.config.ts
backend/: .env.example  LOCAL_AI_SETUP.md  OCR_UPGRADE.md  README.md  TEXT_GROUPING.md  TRANSLATION_VISUALIZATION.md  debug_raw_paddleocr.py  inspect_paddle_output.py  main.py  pyproject.toml  run.py  test_actual_ocr_output.py  test_api.py  test_coordinate_debug.py  test_new_ocr.py  test_translation_viz.py
backend/app/: config.py  main.py
backend/app/models/: request.py  response.py
backend/app/routers/: test_page.py  translate.py  websocket_upload.py
backend/app/services/: animetext_service.py  ctd_service.py  detector_factory.py  detector_service.py  local_translation_service.py  manga_ocr_service.py  ocr_service.py  translation_service.py
backend/app/templates/: test_page.html
backend/app/utils/: ctd_utils.py  image_processing.py  japanese_text_filter.py  text_grouping.py  text_region_extractor.py  zindex_utils.py
backend/docs/: ctd-implementation-plan.md
backend/docs/archive/: PERFORMANCE_OPTIMIZATION_PLAN.md
backend/output/: detection_result.json
backend/scripts/: download_models.py  test_translation_speed.py
backend/training/: .gitignore  README.md  SETUP.md  export.py  pyproject.toml  train.py  utils.py  validate.py
backend/training/configs/: default.yaml
backend/training/scripts/: download_dataset.py  download_model.py  validate_dataset.py
example_extension/: appConfig.ts  chromeApi.ts  fingerprint.ts  fontmetadata.ts  ichigoapi.ts  locales.ts  storage.ts
example_extension/background/: contextMenu.ts
example_extension/utils/: background.ts  translateWithScaling.ts
public/fonts/: FONTS_README.md
public/icons/: ICONS_README.md
runs/detect/val/: predictions.json
src/: manifest.chrome.json  manifest.firefox.json
src/background/: service-worker.ts
src/config/: constants.ts
src/content/: content-script.ts  overlay.css
src/popup/: popup.html  popup.ts
src/services/: api-client.ts  canvas-monitor.ts  image-detector.ts  overlay-renderer.ts  overlay-styles.ts  settings-manager.ts  websocket-client.ts
src/types/: api.ts  content.ts  settings.ts
src/utils/: image-utils.ts
training/.serena/: project.yml
training/docs/: animetext-onnx-conversion-guide.md
training/models/animetext/yolo12s_animetext/: events.out.tfevents.1747472477.197caa7ba88141226195c99eeafb8490b47d74629daea96443dcc28f.2814971.0  labels.json  model_type.json  results.csv  threshold.json
training/results/benchmark/: animetext_benchmark_20260107_092625.json  animetext_benchmark_20260107_092625.md
training/scripts/: benchmark_animetext.py  test_all_phases.py  test_phase1_phase2.py
