[project]
name = "manga-translation-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.119.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.3",
    "paddleocr[doc-parser]>=3.0.0",
    "paddlepaddle>=3.0.0",
    "pillow>=11.3.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.37.0",
]
