[project]
name = "manga-yolo-training"
version = "0.1.0"
description = "YOLOv10n fine-tuning pipeline for manga speech bubble detection"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "roboflow>=1.1.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[tool.uv]
# This is a script-only project, no package to build
package = false
